# pantarei

./: .gitignore  README.md  README.rst  environment.yml  meta.yaml  mpitest.py  pyproject.toml  setup.py  test_storereader.py  test_storewriter.py
.github/workflows/: conda-publish.yml  pypi-publish.yml
conda-recipe/: meta.yaml
examples/: pulsating_pipe_2d.py
notebooks/: Diffusion.ipynb  FenicsStorage.ipynb  FunctionStorage.ipynb  Multicompartment Model.ipynb  Poisuille Flow.ipynb  ReFrameWork.ipynb  mc-concentration-state.pvsm  mixed-functionspace-storage.ipynb  open-boundaries.ipynb
notebooks/diffusion/: results.hdf
pantarei/: __init__.py  boundary.py  computers.py  config.py  domain.py  elements.py  fenicsstorage.py  forms.py  interpolator.py  io_utils.py  meshprocessing.py  mms.py  projectors.py  solvers.py  timekeeper.py  utils.py
pantarei/_cli/: mesh_quality.py
pantarei/io/: __init__.py  fenicsstorage.py  timeseriesstorage.py
src/panta_rhei/: domain.py
src/pantarei/: __init__.py  computers.py  interpolator.py  io_utils.py  utils.py
src/pantarei/_cli/: mesh_quality.py
src/pantarei/io/: __init__.py  timeseriesstorage.py
tests/: _test_fenicsstorage.py  _test_mms_poisson.py  _test_pantarei.py  _test_storereader.py  _test_storewriter.py  test_fenicsstorage.py  test_interpolator.py  test_mms_poisson.py
tests/meshprocessing/: square.geo  square.h5  square.hdf  square.mesh  test_geo2dolfin.py
tests/meshprocessing/outdir/: square.hdf  square.mesh
tests/test_resources/: interpolator_script.py
