[project]
name = "pantarei"
version = "0.1.0"
authors = [
  { name="Jørgen Riseth", email="author@example.com" },
]
description = "Miscellaneous fenics/dolfin utilities that are used in various projects."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ulfy @ git+https://github.com/MiroK/ulfy.git",
]

[project.scripts]
mesh_quality = "pantarei._cli.mesh_quality:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pantarei"]

[tool.black]
line-length = 80

[tool.pyright]
include = ["pantarei"]

[tool.isort]
profile="black"
