[project]
name = "pantarei"
version = "0.3.0"
authors = [
  { name="Jørgen Riseth", email="jnriseth@gmail.com" },
]
description = "Miscellaneous fenics/dolfin utilities that are used in various projects."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "h5py",
  "numpy",
  "matplotlib",
  "meshio",
  "svmtk",
  "loguru",
  "sympy"
]

[project.scripts]
mesh_quality = "pantarei._cli.mesh_quality:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pantarei"]

[tool.black]
line-length = 80

[tool.pyright]
include = ["pantarei"]

[tool.isort]
profile="black"
